instalação do esbuild junto com a configuração do arquivo main.js e de servidor local, e a instalação do React e suas importações

--- a/React-para-iniciante/ferramenta-de-automacao/package.json
+++ b/React-para-iniciante/ferramenta-de-automacao/package.json
@@ -4,9 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "esbuild --bundle src/main.jsx --outfile=main.js --servedir=./ --watch",
+    "build": "esbuild --bundle src/main.jsx --outfile=main.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "esbuild": "^0.20.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  }
 }
